--- a/rules.html
+++ b/rules.html
@@ -40,6 +40,7 @@
                     <p style="font-size: 40px"><b>Pravidlá Turnaja</b>  <img src="img/rozhodca.png" height="35"> </p>
                     <p>Začiatok turnaja = začiatok novej sezóny na HA </p>
                     <p><b>Nasledujúce pravidlá sú platné od 2.sezóny turnaja</b> </p>
+                    <p><b>Maximálne 14 účastníkov v jednej sezóne</b> </p>
                 
 
                     <p><b style="color:#BD0000;font-size: 30px; ">Základná časť</b></p>
