--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <div id="slider">
         <div class="centered">2.sezóna</div> 
+        <div class="centered-2">Oficiálne začína v sobotu 8.8.2020</div> 
    </div>           
 
 
