--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="uvod">
     <div style="display: flex;">
-        <img src="img/clubs/kosice.jpg" width="1200" height="700">
+        <img class="mobile-responsive-img" src="img/clubs/kosice.jpg" width="1200" height="700">
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
@@ -51,7 +51,7 @@
 
  <div class="rozdelenie-clankov">   
    <div class="clanky-mobil" style="">
-    <img src="img/vsetky-kluby.png" height="257">
+    <img class="mobile-responsive-img" src="img/vsetky-kluby.png" height="257">
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">2.sezóna štartuje 8.8.2020</p>
        <h4>V lige nastalo pár zmien. Do ligy prišli tri nové tímy a to <b>Žilina, Bardejov a Nitra</b>, ktorú sme nedokázali získať v prvej sezóne. <b>Nitru</b> si pod krídla do 2.sezóny zobral manažér <b>Zero Zhen</b>. Naopak z ligy odstúpila <b>Gelnica, Martin a Piešťany</b>. Manažér Piešťan, ktoré odstúpili by časom uvítal návrat, ktorý teraz nie je možný kvôli plnej kapacite lige. Vedenie ligy na to bude v budúcích sezónach myslieť.</h4>
@@ -75,7 +75,7 @@
   
 
     <div style="position:absolute; margin-left: 180px;">
-        <img src="img/jersey-nhl/zilina.png" height="220">
+        <img class="mobile-responsive-img" src="img/jersey-nhl/zilina.png" height="220">
         <p class="nazov-hraca"> <img src="" height="16" style="padding-bottom: 2px;"></p>
     </div> 
     <div style="position:absolute; margin-left: 899px;">
@@ -85,15 +85,15 @@
 
 
     <div style="position:absolute; margin-left: 110px; margin-top: 250px;">
-        <img src="img/jersey/michalovce.png" height="210">
+        <img class="mobile-responsive-img" src="img/jersey/michalovce.png" height="210">
         <p class="nazov-hraca"> <img src="" height="16" style="padding-bottom: 2px;"></p>
     </div>
     <div style="position:absolute; margin-left: 570px; margin-top: 277px;">
-        <img src="img/jersey-nhl/kosice.png" height="220">
+        <img class="mobile-responsive-img" src="img/jersey-nhl/kosice.png" height="220">
         <p class="nazov-hraca"> <img src="" height="16" style="padding-bottom: 2px;"></p>
     </div>
     <div style="position:absolute; margin-left: 1030px; margin-top: 240px;">
-        <img src="img/jersey-nhl/kosice.png" height="220">
+        <img class="mobile-responsive-img" src="img/jersey-nhl/kosice.png" height="220">
         <p class="nazov-hraca"> <img src="" height="16" style="padding-bottom: 2px;"></p>
     </div>    
 
