--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
                 <li><a href="schedule.html" style="text-decoration: none;color: white;">Schedule</a></li>
                 <li><a href="standings.html" style="text-decoration: none;color: white;">Standings</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Play-off</a></li>
+                <li><a href="playoff.html" style="text-decoration: none;color: white;">Play-off</a></li>
                 <li><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
                 <li><a href="halloffame.html" style="text-decoration: none;color: white;">Hall of Fame</a></li>
                 <li><a href="managers.html" style="text-decoration: none;color: white;">Managers</a></li>
@@ -167,7 +167,7 @@
                              <tr>
                                 <td></td>
                                 <td id="small-logo-bardejov"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -211,7 +211,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -509,7 +509,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -597,7 +597,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -823,7 +823,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -879,7 +879,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1121,7 +1121,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1221,7 +1221,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1419,7 +1419,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1563,7 +1563,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1651,7 +1651,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1905,7 +1905,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td> 
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -2015,7 +2015,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
