--- a/standings.html
+++ b/standings.html
@@ -20,7 +20,7 @@
                 <li><a href="schedule.html" style="text-decoration: none;color: white;">Schedule</a></li>
                 <li><a href="standings.html" style="text-decoration: none;color: white;">Standings</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Play-off</a></li>
+                <li><a href="playoff.html" style="text-decoration: none;color: white;">Play-off</a></li>
                 <li><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
                 <li><a href="halloffame.html" style="text-decoration: none;color: white;">Hall of Fame</a></li>
                 <li><a href="managers.html" style="text-decoration: none;color: white;">Managers</a></li>
@@ -225,7 +225,7 @@
                              <tr>
                                 <td class="nepostupuje">14.</td>
                                 <td class="logo"><img src="img/logo/bardejov.png" height="20"></td>
-                                <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=48113" style="color: black;">Bardejov</a></td>
+                                <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
                                 <td class="stats"></td>
                                 <td class="stats"></td>
                                 <td class="stats"></td>
