--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
     			<li><a href="schedule.html" style="text-decoration: none;color: white;">Schedule</a></li>
     			<li><a href="standings.html" style="text-decoration: none;color: white;">Standings</a></li>
     			<li><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Play-off</a></li>
+                <li><a href="playoff.html" style="text-decoration: none;color: white;">Play-off</a></li>
     			<li><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
     			<li><a href="halloffame.html" style="text-decoration: none;color: white;">Hall of Fame</a></li>
     			<li><a href="managers.html" style="text-decoration: none;color: white;">Managers</a></li>
