--- a/managers.html
+++ b/managers.html
@@ -398,7 +398,7 @@
                 <tbody>
                     <tr>
                         <td>manažér</td>
-                        <td><a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=718517">JCVD#B</a></td>
+                        <td><a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=201332">JCVD</a></td>
                     </tr>
                     <tr>
                         <td>Sezóny</td>
