--- a/playoff.html
+++ b/playoff.html
@@ -43,7 +43,7 @@
     <div class="hero-wrap">
      <p class="intro" id="intro">Play-off</p>
          <h1 id="headline">Tipsport Liga</h1>
-         <p class="year"><i class="fa fa-star"></i> 2 sezóna <i class="fa fa-star"></i></p>
+         <p class="year"><img src="img/slovakian tipsport liga.png"></p>
      
    </div>
     </header>
@@ -51,6 +51,7 @@
 
     <section id="bracket">
     <div class="container">
+     <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
             <div class="round-details">štvrťfinále<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
@@ -97,11 +98,156 @@
             </ul>
         </div>
 </div>
+<div>
+    
+</div>
+</div>
+</section>
 
 
+<div class="zapasy-play-off">
+        <div class="menu">
+            <div id="play-off" align="center">Finále</div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+        </div>
 
+        <div class="menu">
+            <div id="play-off" align="center">Semifinále</div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <div class="menu">
+            <div id="play-off" align="center"></div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+        </div>
+        </div>
+ 
+        <div class="menu">
+            <div id="play-off" align="center">Štvrťfinále</div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <div class="menu">
+            <div id="play-off" align="center"></div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+        </div>
+        <div class="menu">
+            <div id="play-off" align="center"></div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+        </div>
+        <div class="menu">
+            <div id="play-off" align="center"></div>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+            <ul class="zapasy-detaily">
+                <li class="zapas">HC Košice</li>
+                <li class="zapas">HC Slovan Bratislava</li>
+            </ul>
+        </div>
+        </div>
 
+</div>
 
+<style type="text/css">
+.zapas{
+    text-align: left;
+    padding: 0 5px;
+    margin: 3px 0;
+    height: 25px; 
+    line-height: 25px;
+    white-space: nowrap; 
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    display:block;
+}
+.zapasy-detaily{
+    display: inline-block;
+}
+#play-off{
+    font-weight: bold;
+    font-size: 20px;
+    padding-top: 30px;
+}
+.menu{
+    text-align: center;
+
+}
+.zapasy-play-off{
+    overflow-y: scroll;
+    height: 450px;
+    display: none;
+}
+
+</style>
 
 <script type="text/javascript" src="app.js"></script>
 </body>
