--- a/playoff.html
+++ b/playoff.html
@@ -105,147 +105,215 @@
 </section>
 
 
-<div class="zapasy-play-off">
-        <div class="menu">
-            <div id="play-off" align="center">Finále</div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-        </div>
+<div class="zapasy-play-off" align="center">
+        <table class="tabulka-zapasov-playoff">
+            <thead>
+                <th></th>
+                <th colspan="3">Finále</th>               
+            </thead>
+            <thead>
+                <th>Dátum</th>
+                <th>Doma</th>
+                <th>Výsledok</th>
+                <th>Vonku</th>
+            </thead>
+            <tbody>
+               <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+               <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 
-        <div class="menu">
-            <div id="play-off" align="center">Semifinále</div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <div class="menu">
-            <div id="play-off" align="center"></div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-        </div>
-        </div>
- 
-        <div class="menu">
-            <div id="play-off" align="center">Štvrťfinále</div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <div class="menu">
-            <div id="play-off" align="center"></div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-        </div>
-        <div class="menu">
-            <div id="play-off" align="center"></div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-        </div>
-        <div class="menu">
-            <div id="play-off" align="center"></div>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-            <ul class="zapasy-detaily">
-                <li class="zapas">HC Košice</li>
-                <li class="zapas">HC Slovan Bratislava</li>
-            </ul>
-        </div>
-        </div>
 
+
+        <table class="tabulka-zapasov-playoff">
+            <thead>
+                <th></th>
+                <th colspan="3">Semifinále</th>               
+            </thead>
+            <thead>
+                <th>Dátum</th>
+                <th>Doma</th>
+                <th>Výsledok</th>
+                <th>Vonku</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr class="posledny-zapas">
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+
+
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+
+
+        <table class="tabulka-zapasov-playoff">
+            <thead>
+                <th></th>
+                <th colspan="3">Štvrťfinále</th>               
+            </thead>
+            <thead>
+                <th>Dátum</th>
+                <th>Doma</th>
+                <th>Výsledok</th>
+                <th>Vonku</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                 <tr class="posledny-zapas">
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+
+
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+               <tr class="posledny-zapas">
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr class="posledny-zapas">
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+
+
+               <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="datum-playoff"></td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 </div>
 
 <style type="text/css">
-.zapas{
-    text-align: left;
-    padding: 0 5px;
-    margin: 3px 0;
-    height: 25px; 
-    line-height: 25px;
-    white-space: nowrap; 
-    overflow: hidden;
-    background-color: white;
-    width: 250px;
-    display:block;
-}
-.zapasy-detaily{
-    display: inline-block;
-}
-#play-off{
-    font-weight: bold;
-    font-size: 20px;
-    padding-top: 30px;
-}
-.menu{
-    text-align: center;
-
-}
 .zapasy-play-off{
-    overflow-y: scroll;
-    height: 450px;
+    height: 600px;
+    padding-top: 50px;
     display: none;
 }
+.datum-playoff th{
+    width: 50px;
+    background-color: red;
+}
+.tabulka-zapasov-playoff th{
+    background-color: #E4721F;
+    width: 150px;
+    text-align: center;
+}
+.vysledok{
+    text-align: center;
+}
+.datum-playoff{
+    text-align: center;
+}
+.posledny-zapas{
+    border-bottom: 2px solid #E4721F;
+}
+
 
 </style>
 
